# n-apt

./: .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .rustfmt.toml  .windsurfignore  .windsurfrules  AGENTS.md  BACKEND_AGENT_IMPLEMENTATION.md  BACKGROUND.md  CANVAS_DPI_GUIDE.md  CAPTURED.md  Cargo-wasm.toml  Cargo.toml  DEVELOPMENT.md  DYNAMIC_SIGNALS_SUMMARY.md  FFT_DISTRIBUTION_FIX.md  LICENSE  MOCK_DATA_IMPROVEMENTS.md  PRETEXT_INTEGRATION_SUMMARY.md  README.md  README_RUST.md  RESPONSIBLE_USE.md  SIMD_README.md  STITCHER_PERFORMANCE_ANALYSIS.md  bsconfig.json  build.rs  build_wasm.sh  clippy.toml  debug-sw.js  index.html  jest.canvasSetup.cjs  jest.config.cjs  ladle.config.ts  ladle.vite.config.ts  macros_tail.txt  mock_signals.yaml  opencode.json  oxfmt.json  oxlint.json  (+25 more)
.agents/: AGENTS.md  AGENT_FEATURES_SUMMARY.md  AUTHENTICATION_MOCK_DATA_FIX.md  BACKEND_AGENT_IMPLEMENTATION.md  COVERAGE_IMPROVEMENTS_SUMMARY.md  DEVELOPMENT.md  DEVICE_STREAM_FROZEN_TESTS_FIX.md  DYNAMIC_SIGNALS_SUMMARY.md  DYNAMIC_TOWER_LOADING.md  FFT_CANVAS_OPTIMIZATION_COMPLETE.md  FFT_CANVAS_OPTIMIZATION_PROGRESS.md  FFT_CANVAS_STATE_MACHINE_SUMMARY.md  FFT_DISTRIBUTION_FIX.md  FFT_FRAMERATE_INVESTIGATION.md  FLAT_LINE_SIGNAL_FIX.md  HOTLOADING_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MARKDOWN_FOR_AGENTS_AND_MCP.md  MOCK_DATA_IMPROVEMENTS.md  PERFORMANCE_HOT_RELOAD.md  README_RUST.md  RTL-SDR_SAMPLE_RATE_REGRESSION_FIX.md  SIGNAL_BIAS_COMPLETE_FIX.md  SIGNAL_CLUSTERING_FIX.md  TOWER_LIMITING_PROTECTION.md  VFO_GRID_INTEGRATION.md  ci-optimization-summary.md  entity-cleaning.md  iq-capture-integration-tests.md  opencellid-format.md  opencellid-results.md  redis-geospatial-demo.md  redis-tower-integration.md  rendering-hooks-refactor.md
.agents/build-output-redesign/: IMPLEMENTATION_SUMMARY.md
.cargo/: config.toml
.github/workflows/: test.yml
.ladle/: components.tsx  head.html
.redis_data/appendonlydir/: appendonly.aof.manifest
.storybook/: main.ts  preview.ts
.windsurf/rules/: agent-markdown-organization.md  namespacing.md
data/: README.md
data/json/: entities_cleaned.json  processing_stats.json  sample.json
docs/: index.html  redis-sharding.md  redis-tower-integration.md
docs/assets/: CanvasText-CBonfVPK.js  TriangulationCloseEnoughCanvas-CtqHvqyQ.js  TriangulationMapCanvas-C8ZRELww.js  canvas-3jefdmeX.js  canvas-B4cxknET.js  canvas-BJcrulT_.js  canvas-Bgu2175A.js  canvas-BqJUMfC5.js  canvas-CTOBPG2A.js  canvas-CbydAsp5.js  canvas-CeTUvIbt.js  canvas-CrMktkQi.js  canvas-DCqgDuQy.js  canvas-DV1GQIMi.js  canvas-DrBbYkkc.js  canvas-G6Gknmqq.js  canvas-UsLgu_su.js  index-0xsMnh0T.js  index-B-Laz8Oc.js  index-B0mkCzJi.js  index-BClH5Yrw.css  index-BRnPnepW.js  index-BxrmmcNg.js  index-CI-4aBB3.js  index-COo887oE.js  index-CeGfPT7k.js  index-D12avL9j.js  index-D7UPwmq-.js  index-D8XLP7KJ.js  index-DF5HDAYB.js  index-DRKzlHv6.js  index-DTaMPYgz.js  index-DnV6GPwS.js  index-DoCXD5--.js  index-j-Ho76ym.css
docs/pages/: BACKGROUND.md  CAPTURED.md  how-do-they-do-it.md
iq-samples-snapshots/: sdr-ppp-recordings.alias
iq-samples-snapshots/mock/: mock_capture_cap_1774749285201_20260329_015446.napt
lib/bs/: .bsbuild  .bsdeps  .ninja_log  .sourcedirs.json  build.ninja  install.ninja
lib/ocaml/: Main.ast  UseWebSocket.ast
pages/: BACKGROUND.md  CAPTURED.md  damped_waves.html  how-do-they-do-it.md
public/: manifest.json  sw.js  transformers-test.html
public/glb_models/: brain.glb
public/pages/: dirac_comb_wave.html  index.html  reverse_damped_waves_clumps.html  waterfall-demo_Version2.html
redis/: .gitignore  README.md  redis.conf
redis/export/: README.md
scripts/: NaptLogo.tsx  README.md  README_REZI.md  build_orchestrator.sh  build_orchestrator_fast.sh  build_wasm.sh  check_changes.sh  decode_raw.py  decrypt_napt.mjs  dev.sh  dev_fast.sh  dev_server.sh  download_opencellid_cached.cjs  env.sh  extract_ongoing.cjs  fetch_towers_fcc.sh  indent_output.sh  iq_to_svg.py  kill_blockers.sh  load_local_radius_towers.cjs  load_region_towers.cjs  process_fcc_data.cjs  redis_persistent_manager.sh  rezi_build.mjs  rezi_build_correct.tsx  rezi_build_exact.tsx  rezi_build_final.tsx  rezi_build_fixed.tsx  rezi_build_image.tsx  rezi_build_official.tsx  rezi_build_orchestrator.tsx  rezi_build_orchestrator_simple.tsx  rezi_build_orchestrator_v2.tsx  rezi_build_pure.tsx  rezi_build_working.tsx  rtl_sdr_capture.py  run-iq-capture-tests.sh  rustfmt-fast.sh  rustfmt-parallel.sh  setup_redis.sh  (+7 more)
scripts/data/: README.md  cleanEntities.cjs  download_opencellid_cached.cjs  extract_ongoing.cjs  load_all_towers_to_redis.cjs  load_local_radius_towers.cjs  load_sample_states.cjs  process_opencellid.cjs  setup_redis.sh  test_load_sample.cjs
scripts/deployment/: README.md
scripts/encrypted-modules/: README.md  crypt.ts
scripts/git/: README.md  commit_encrypted_modules.sh  link_shared_worktree_assets.sh  setup_worktrees.sh  worktree_manager.sh
scripts/processing/: README.md  check_changes.sh  ci_timing.sh  kill_blockers.sh
scripts/redis/: download_opencellid_cached.cjs  load_all_towers_to_redis.cjs  load_local_radius_towers.cjs  load_region_towers.cjs  load_towers_to_redis.cjs
scripts/rust/: rustfmt-fast.sh  rustfmt-parallel.sh
scripts/setup/: create_env.js
scripts/visualization/: README.md
sdr_wasm/: QUICKSTART.md  demo.html
sdr_wasm/src/: lib.rs  stitcher.rs
simple-waterfall-demo/: simple-fft-waterfall-demo.html
src/: App.jsx  App.res  App.res.mjs  App.tsx  Main.res  Main.res.mjs  Main.tsx  SpectrumCanvas.tsx  WaterfallCanvas.tsx  index.css  index.html  lib.rs  main.jsx  vite-env.d.ts  wasm_lib.rs
src/agents/: AgentIntegrationProvider.tsx  README.md  backend-integration.md
src/backend/: backend.py
src/consts/: fft.ts  (+6 more)
test/: authentication_tests.rs
test/wasm/: Cargo.toml  README.md  run_tests.sh  simple_simd_tests.rs  test_runner.sh  wasm_simd_tests.rs.backup
test/wasm/src/: lib.rs  simple_wasm_tests.rs  wasm_simd_processor_tests.rs
tests/wasm/: Cargo.toml  simple_simd_tests.rs  webdriver.json
tests/wasm/src/: lib.rs  simple_wasm_tests.rs
(+877 files in other folders)
