[package]
name = "n-apt-backend"
version = "0.2.5"
license = "Hippocratic-3.0"
edition = "2021"
authors = ["Ceane Lamerez"]
descrption = "Visualize FFTs/waterfalls, capture a snapshot or I/Q capture & more, tailored toward N-APT signals. Analyze, learn, record, document & demodulate N-APT signals."

[lib]
name = "n_apt_backend"
path = "src/rs/lib.rs"
crate-type = ["cdylib", "rlib"]
doctest = false

[[bin]]
name = "n-apt-backend"
path = "src/rs/server/main_bin.rs"

[[test]]
name = "fft_processor_tests"
path = "test/rust/fft_processor_tests.rs"

[[test]]
name = "device_stream_frozen_tests"
path = "test/rust/device_stream_frozen_tests.rs"

[[test]]
name = "authentication_tests"
path = "test/rust/authentication_tests.rs"

[[test]]
name = "mock_apt_tests"
path = "test/rust/mock_apt_tests.rs"

[[test]]
name = "server_tests"
path = "test/rust/server_tests.rs"

[[test]]
name = "capture_stitch_tests"
path = "test/rust/capture_stitch_tests.rs"

[[bin]]
name = "live_stream_test"
path = "src/rs/bin/live_stream_test.rs"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(rs_decrypted)'] }

[dependencies]
paste = "1.0"

# Core dependencies (always included)
rustfft = "6"
num-complex = "0.4"
rand = "0.8"
rayon = "1.10"
getrandom = { version = "0.2", features = ["js"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = "1.25.0"
url = "2"
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
byteorder = "1.4"
env_logger = "0.10"

# WASM dependencies (only when targeting WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

# Server dependencies (only when not targeting WASM)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = "0.20"
redis = "0.27"
env_logger = "0.10"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
# Encryption: AES-256-GCM for payload encryption, HMAC/PBKDF2 for auth
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
base64 = "0.22"
zip = { version = "2", default-features = false, features = ["deflate"] }
# HTTP client for CoreML service communication
reqwest = { version = "0.11", features = ["json"] }
# HTTP + WebSocket server (axum replaces raw TcpListener + tokio-tungstenite)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "set-header", "compression-gzip"] }
# WebAuthn passkey authentication
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"
# Session management
uuid = { version = "1", features = ["v4"] }
# Hot reloading and configuration
notify = "6.0"
serde_yaml = "0.9"
indexmap = { version = "2.0", features = ["serde"] }
crossbeam-channel = "0.5"
yawc = { version = "0.3.3", features = ["axum", "zlib"] }

[dev-dependencies]
doc-comment = "0.3"
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio-test = "0.4"
axum-test = "15.0"
tower = "0.4"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
pkg-config = "0.3"

# Server configuration
[package.metadata.server]
host = "127.0.0.1"
port = 8765

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[profile.dev]
opt-level = 0
incremental = true
debug = true
codegen-units = 16

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 8
panic = "abort"
strip = true
overflow-checks = false

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = false
incremental = true
codegen-units = 16
