[package]
name = "wasm-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.web-sys]
version = "0.3.97"
features = ["console"]

[dependencies]
wasm-bindgen = "0.2.120"
wasm-bindgen-test = "0.3.70"
js-sys = "0.3.97"
n-apt-backend = { path = "../../" }
getrandom = { version = "0.2", features = ["js"] }

[package.metadata.wasm-pack.profile.dev]
wasm-opt = ['-O']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O']
